retrieveUnpackaged/objects/Object_Item_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Object Item Contacts</relationshipLabel>
        <relationshipName>Object_Item_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Item__c</fullName>
        <label>Object Item</label>
        <referenceTo>Object_Item__c</referenceTo>
        <relationshipLabel>Object Item Contacts</relationshipLabel>
        <relationshipName>Object_Item_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Object Item Contact</label>
    <nameField>
        <displayFormat>OC-{000000}</displayFormat>
        <label>Object Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Item Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>